--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,16 +14,15 @@ steps:
   inputs:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
-
 - task: BrowserStackConfig@0
   inputs:
     BrowserStackServiceEndPoint: 'browserstack-connection'
 
+- script: |
+    npm install
+    npm run test
+  displayName: 'npm install and build'
+
 - task: BrowserStackResults@1
   inputs:
     browserstackProduct: 'automate'
-
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
